// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`animation selectors > animation backInDown 1`] = `
"/* layer: default */
@keyframes unAnimationBackInDown {
0% {
      transform: translateY(-1200px) scale(0.7);
      opacity: 0.7;
    }

    80% {
      transform: translateY(0px) scale(0.7);
      opacity: 0.7;
    }

    100% {
      transform: scale(1);
      opacity: 1;
    }
}
.animation-back-in-down{animation-name: unAnimationBackInDown;}"
`;

exports[`animation selectors > animation backInDown with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBackInDown {
0% {
      transform: translateY(-1200px) scale(0.7);
      opacity: 0.7;
    }

    80% {
      transform: translateY(0px) scale(0.7);
      opacity: 0.7;
    }

    100% {
      transform: scale(1);
      opacity: 1;
    }
}
.animation-back-in-down{animation-name: unAnimationBackInDown;}"
`;

exports[`animation selectors > animation backInLeft 1`] = `
"/* layer: default */
@keyframes unAnimationBackInLeft {
0% {
      transform: translateX(-2000px) scale(0.7);
      opacity: 0.7;
    }

    80% {
      transform: translateX(0px) scale(0.7);
      opacity: 0.7;
    }

    100% {
      transform: scale(1);
      opacity: 1;
    }
}
.animation-back-in-left{animation-name: unAnimationBackInLeft;}"
`;

exports[`animation selectors > animation backInLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBackInLeft {
0% {
      transform: translateX(-2000px) scale(0.7);
      opacity: 0.7;
    }

    80% {
      transform: translateX(0px) scale(0.7);
      opacity: 0.7;
    }

    100% {
      transform: scale(1);
      opacity: 1;
    }
}
.animation-back-in-left{animation-name: unAnimationBackInLeft;}"
`;

exports[`animation selectors > animation backInRight 1`] = `
"/* layer: default */
@keyframes unAnimationBackInRight {
0% {
      transform: translateX(2000px) scale(0.7);
      opacity: 0.7;
    }

    80% {
      transform: translateX(0px) scale(0.7);
      opacity: 0.7;
    }

    100% {
      transform: scale(1);
      opacity: 1;
    }
}
.animation-back-in-right{animation-name: unAnimationBackInRight;}"
`;

exports[`animation selectors > animation backInRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBackInRight {
0% {
      transform: translateX(2000px) scale(0.7);
      opacity: 0.7;
    }

    80% {
      transform: translateX(0px) scale(0.7);
      opacity: 0.7;
    }

    100% {
      transform: scale(1);
      opacity: 1;
    }
}
.animation-back-in-right{animation-name: unAnimationBackInRight;}"
`;

exports[`animation selectors > animation backInUp 1`] = `
"/* layer: default */
@keyframes unAnimationBackInUp {
0% {
      transform: translateY(1200px) scale(0.7);
      opacity: 0.7;
    }

    80% {
      transform: translateY(0px) scale(0.7);
      opacity: 0.7;
    }

    100% {
      transform: scale(1);
      opacity: 1;
    }
}
.animation-back-in-up{animation-name: unAnimationBackInUp;}"
`;

exports[`animation selectors > animation backInUp with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBackInUp {
0% {
      transform: translateY(1200px) scale(0.7);
      opacity: 0.7;
    }

    80% {
      transform: translateY(0px) scale(0.7);
      opacity: 0.7;
    }

    100% {
      transform: scale(1);
      opacity: 1;
    }
}
.animation-back-in-up{animation-name: unAnimationBackInUp;}"
`;

exports[`animation selectors > animation backOutDown 1`] = `
"/* layer: default */
@keyframes unAnimationBackOutDown {
0% {
      transform: scale(1);
      opacity: 1;
    }

    20% {
      transform: translateY(0px) scale(0.7);
      opacity: 0.7;
    }

    100% {
      transform: translateY(700px) scale(0.7);
      opacity: 0.7;
    }
}
.animation-back-out-down{animation-name: unAnimationBackOutDown;}"
`;

exports[`animation selectors > animation backOutDown with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBackOutDown {
0% {
      transform: scale(1);
      opacity: 1;
    }

    20% {
      transform: translateY(0px) scale(0.7);
      opacity: 0.7;
    }

    100% {
      transform: translateY(700px) scale(0.7);
      opacity: 0.7;
    }
}
.animation-back-out-down{animation-name: unAnimationBackOutDown;}"
`;

exports[`animation selectors > animation backOutLeft 1`] = `
"/* layer: default */
@keyframes unAnimationBackOutLeft {
0% {
      transform: scale(1);
      opacity: 1;
    }

    20% {
      transform: translateX(0px) scale(0.7);
      opacity: 0.7;
    }

    100% {
      transform: translateX(-2000px) scale(0.7);
      opacity: 0.7;
    }
}
.animation-back-out-left{animation-name: unAnimationBackOutLeft;}"
`;

exports[`animation selectors > animation backOutLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBackOutLeft {
0% {
      transform: scale(1);
      opacity: 1;
    }

    20% {
      transform: translateX(0px) scale(0.7);
      opacity: 0.7;
    }

    100% {
      transform: translateX(-2000px) scale(0.7);
      opacity: 0.7;
    }
}
.animation-back-out-left{animation-name: unAnimationBackOutLeft;}"
`;

exports[`animation selectors > animation backOutRight 1`] = `
"/* layer: default */
@keyframes unAnimationBackOutRight {
0% {
      transform: scale(1);
      opacity: 1;
    }

    20% {
      transform: translateX(0px) scale(0.7);
      opacity: 0.7;
    }

    100% {
      transform: translateX(2000px) scale(0.7);
      opacity: 0.7;
    }
}
.animation-back-out-right{animation-name: unAnimationBackOutRight;}"
`;

exports[`animation selectors > animation backOutRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBackOutRight {
0% {
      transform: scale(1);
      opacity: 1;
    }

    20% {
      transform: translateX(0px) scale(0.7);
      opacity: 0.7;
    }

    100% {
      transform: translateX(2000px) scale(0.7);
      opacity: 0.7;
    }
}
.animation-back-out-right{animation-name: unAnimationBackOutRight;}"
`;

exports[`animation selectors > animation backOutUp 1`] = `
"/* layer: default */
@keyframes unAnimationBackOutUp {
0% {
      transform: scale(1);
      opacity: 1;
    }

    20% {
      transform: translateY(0px) scale(0.7);
      opacity: 0.7;
    }

    100% {
      transform: translateY(-700px) scale(0.7);
      opacity: 0.7;
    }
}
.animation-back-out-up{animation-name: unAnimationBackOutUp;}"
`;

exports[`animation selectors > animation backOutUp with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBackOutUp {
0% {
      transform: scale(1);
      opacity: 1;
    }

    20% {
      transform: translateY(0px) scale(0.7);
      opacity: 0.7;
    }

    100% {
      transform: translateY(-700px) scale(0.7);
      opacity: 0.7;
    }
}
.animation-back-out-up{animation-name: unAnimationBackOutUp;}"
`;

exports[`animation selectors > animation bounce 1`] = `
"/* layer: default */
@keyframes unAnimationBounce {
from,
    20%,
    53%,
    to {
      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
      transform: translate3d(0, 0, 0);
    }

    40%,
    43% {
      animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
      transform: translate3d(0, -30px, 0) scaleY(1.1);
    }

    70% {
      animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
      transform: translate3d(0, -15px, 0) scaleY(1.05);
    }

    80% {
      transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
      transform: translate3d(0, 0, 0) scaleY(0.95);
    }

    90% {
      transform: translate3d(0, -4px, 0) scaleY(1.02);
    }
}
.animation-bounce{animation-name: unAnimationBounce; transform-origin: center bottom;}"
`;

exports[`animation selectors > animation bounce with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBounce {
from,
    20%,
    53%,
    to {
      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
      transform: translate3d(0, 0, 0);
    }

    40%,
    43% {
      animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
      transform: translate3d(0, -30px, 0) scaleY(1.1);
    }

    70% {
      animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
      transform: translate3d(0, -15px, 0) scaleY(1.05);
    }

    80% {
      transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
      transform: translate3d(0, 0, 0) scaleY(0.95);
    }

    90% {
      transform: translate3d(0, -4px, 0) scaleY(1.02);
    }
}
.animation-bounce{animation-name: unAnimationBounce; transform-origin: center bottom;}"
`;

exports[`animation selectors > animation bounceIn 1`] = `
"/* layer: default */
@keyframes unAnimationBounceIn {
from,
    20%,
    40%,
    60%,
    80%,
    to {
      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    0% {
      opacity: 0;
      transform: scale3d(0.3, 0.3, 0.3);
    }

    20% {
      transform: scale3d(1.1, 1.1, 1.1);
    }

    40% {
      transform: scale3d(0.9, 0.9, 0.9);
    }

    60% {
      opacity: 1;
      transform: scale3d(1.03, 1.03, 1.03);
    }

    80% {
      transform: scale3d(0.97, 0.97, 0.97);
    }

    to {
      opacity: 1;
      transform: scale3d(1, 1, 1);
    }
}
.animation-bounce-in{animation-name: unAnimationBounceIn; animation-duration: calc(var(--un-animate-duration) * 0.75);}"
`;

exports[`animation selectors > animation bounceIn with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBounceIn {
from,
    20%,
    40%,
    60%,
    80%,
    to {
      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    0% {
      opacity: 0;
      transform: scale3d(0.3, 0.3, 0.3);
    }

    20% {
      transform: scale3d(1.1, 1.1, 1.1);
    }

    40% {
      transform: scale3d(0.9, 0.9, 0.9);
    }

    60% {
      opacity: 1;
      transform: scale3d(1.03, 1.03, 1.03);
    }

    80% {
      transform: scale3d(0.97, 0.97, 0.97);
    }

    to {
      opacity: 1;
      transform: scale3d(1, 1, 1);
    }
}
.animation-bounce-in{animation-name: unAnimationBounceIn; animation-duration: calc(var(--foo-bar-duration) * 0.75);}"
`;

exports[`animation selectors > animation bounceInDown 1`] = `
"/* layer: default */
@keyframes unAnimationBounceInDown {
from,
    60%,
    75%,
    90%,
    to {
      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    0% {
      opacity: 0;
      transform: translate3d(0, -3000px, 0) scaleY(3);
    }

    60% {
      opacity: 1;
      transform: translate3d(0, 25px, 0) scaleY(0.9);
    }

    75% {
      transform: translate3d(0, -10px, 0) scaleY(0.95);
    }

    90% {
      transform: translate3d(0, 5px, 0) scaleY(0.985);
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-bounce-in-down{animation-name: unAnimationBounceInDown;}"
`;

exports[`animation selectors > animation bounceInDown with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBounceInDown {
from,
    60%,
    75%,
    90%,
    to {
      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    0% {
      opacity: 0;
      transform: translate3d(0, -3000px, 0) scaleY(3);
    }

    60% {
      opacity: 1;
      transform: translate3d(0, 25px, 0) scaleY(0.9);
    }

    75% {
      transform: translate3d(0, -10px, 0) scaleY(0.95);
    }

    90% {
      transform: translate3d(0, 5px, 0) scaleY(0.985);
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-bounce-in-down{animation-name: unAnimationBounceInDown;}"
`;

exports[`animation selectors > animation bounceInLeft 1`] = `
"/* layer: default */
@keyframes unAnimationBounceInLeft {
from,
    60%,
    75%,
    90%,
    to {
      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    0% {
      opacity: 0;
      transform: translate3d(-3000px, 0, 0) scaleX(3);
    }

    60% {
      opacity: 1;
      transform: translate3d(25px, 0, 0) scaleX(1);
    }

    75% {
      transform: translate3d(-10px, 0, 0) scaleX(0.98);
    }

    90% {
      transform: translate3d(5px, 0, 0) scaleX(0.995);
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-bounce-in-left{animation-name: unAnimationBounceInLeft;}"
`;

exports[`animation selectors > animation bounceInLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBounceInLeft {
from,
    60%,
    75%,
    90%,
    to {
      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    0% {
      opacity: 0;
      transform: translate3d(-3000px, 0, 0) scaleX(3);
    }

    60% {
      opacity: 1;
      transform: translate3d(25px, 0, 0) scaleX(1);
    }

    75% {
      transform: translate3d(-10px, 0, 0) scaleX(0.98);
    }

    90% {
      transform: translate3d(5px, 0, 0) scaleX(0.995);
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-bounce-in-left{animation-name: unAnimationBounceInLeft;}"
`;

exports[`animation selectors > animation bounceInRight 1`] = `
"/* layer: default */
@keyframes unAnimationBounceInRight {
from,
    60%,
    75%,
    90%,
    to {
      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    from {
      opacity: 0;
      transform: translate3d(3000px, 0, 0) scaleX(3);
    }

    60% {
      opacity: 1;
      transform: translate3d(-25px, 0, 0) scaleX(1);
    }

    75% {
      transform: translate3d(10px, 0, 0) scaleX(0.98);
    }

    90% {
      transform: translate3d(-5px, 0, 0) scaleX(0.995);
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-bounce-in-right{animation-name: unAnimationBounceInRight;}"
`;

exports[`animation selectors > animation bounceInRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBounceInRight {
from,
    60%,
    75%,
    90%,
    to {
      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    from {
      opacity: 0;
      transform: translate3d(3000px, 0, 0) scaleX(3);
    }

    60% {
      opacity: 1;
      transform: translate3d(-25px, 0, 0) scaleX(1);
    }

    75% {
      transform: translate3d(10px, 0, 0) scaleX(0.98);
    }

    90% {
      transform: translate3d(-5px, 0, 0) scaleX(0.995);
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-bounce-in-right{animation-name: unAnimationBounceInRight;}"
`;

exports[`animation selectors > animation bounceInUp 1`] = `
"/* layer: default */
@keyframes unAnimationBounceInUp {
from,
    60%,
    75%,
    90%,
    to {
      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    from {
      opacity: 0;
      transform: translate3d(0, 3000px, 0) scaleY(5);
    }

    60% {
      opacity: 1;
      transform: translate3d(0, -20px, 0) scaleY(0.9);
    }

    75% {
      transform: translate3d(0, 10px, 0) scaleY(0.95);
    }

    90% {
      transform: translate3d(0, -5px, 0) scaleY(0.985);
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-bounce-in-up{animation-name: unAnimationBounceInUp;}"
`;

exports[`animation selectors > animation bounceInUp with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBounceInUp {
from,
    60%,
    75%,
    90%,
    to {
      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    from {
      opacity: 0;
      transform: translate3d(0, 3000px, 0) scaleY(5);
    }

    60% {
      opacity: 1;
      transform: translate3d(0, -20px, 0) scaleY(0.9);
    }

    75% {
      transform: translate3d(0, 10px, 0) scaleY(0.95);
    }

    90% {
      transform: translate3d(0, -5px, 0) scaleY(0.985);
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-bounce-in-up{animation-name: unAnimationBounceInUp;}"
`;

exports[`animation selectors > animation bounceOut 1`] = `
"/* layer: default */
@keyframes unAnimationBounceOut {
20% {
      transform: scale3d(0.9, 0.9, 0.9);
    }

    50%,
    55% {
      opacity: 1;
      transform: scale3d(1.1, 1.1, 1.1);
    }

    to {
      opacity: 0;
      transform: scale3d(0.3, 0.3, 0.3);
    }
}
.animation-bounce-out{animation-name: unAnimationBounceOut; animation-duration: calc(var(--un-animate-duration) * 0.75);}"
`;

exports[`animation selectors > animation bounceOut with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBounceOut {
20% {
      transform: scale3d(0.9, 0.9, 0.9);
    }

    50%,
    55% {
      opacity: 1;
      transform: scale3d(1.1, 1.1, 1.1);
    }

    to {
      opacity: 0;
      transform: scale3d(0.3, 0.3, 0.3);
    }
}
.animation-bounce-out{animation-name: unAnimationBounceOut; animation-duration: calc(var(--foo-bar-duration) * 0.75);}"
`;

exports[`animation selectors > animation bounceOutDown 1`] = `
"/* layer: default */
@keyframes unAnimationBounceOutDown {
20% {
      transform: translate3d(0, 10px, 0) scaleY(0.985);
    }

    40%,
    45% {
      opacity: 1;
      transform: translate3d(0, -20px, 0) scaleY(0.9);
    }

    to {
      opacity: 0;
      transform: translate3d(0, 2000px, 0) scaleY(3);
    }
}
.animation-bounce-out-down{animation-name: unAnimationBounceOutDown;}"
`;

exports[`animation selectors > animation bounceOutDown with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBounceOutDown {
20% {
      transform: translate3d(0, 10px, 0) scaleY(0.985);
    }

    40%,
    45% {
      opacity: 1;
      transform: translate3d(0, -20px, 0) scaleY(0.9);
    }

    to {
      opacity: 0;
      transform: translate3d(0, 2000px, 0) scaleY(3);
    }
}
.animation-bounce-out-down{animation-name: unAnimationBounceOutDown;}"
`;

exports[`animation selectors > animation bounceOutLeft 1`] = `
"/* layer: default */
@keyframes unAnimationBounceOutLeft {
20% {
      opacity: 1;
      transform: translate3d(20px, 0, 0) scaleX(0.9);
    }

    to {
      opacity: 0;
      transform: translate3d(-2000px, 0, 0) scaleX(2);
    }
}
.animation-bounce-out-left{animation-name: unAnimationBounceOutLeft;}"
`;

exports[`animation selectors > animation bounceOutLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBounceOutLeft {
20% {
      opacity: 1;
      transform: translate3d(20px, 0, 0) scaleX(0.9);
    }

    to {
      opacity: 0;
      transform: translate3d(-2000px, 0, 0) scaleX(2);
    }
}
.animation-bounce-out-left{animation-name: unAnimationBounceOutLeft;}"
`;

exports[`animation selectors > animation bounceOutRight 1`] = `
"/* layer: default */
@keyframes unAnimationBounceOutRight {
20% {
      opacity: 1;
      transform: translate3d(-20px, 0, 0) scaleX(0.9);
    }

    to {
      opacity: 0;
      transform: translate3d(2000px, 0, 0) scaleX(2);
    }
}
.animation-bounce-out-right{animation-name: unAnimationBounceOutRight;}"
`;

exports[`animation selectors > animation bounceOutRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBounceOutRight {
20% {
      opacity: 1;
      transform: translate3d(-20px, 0, 0) scaleX(0.9);
    }

    to {
      opacity: 0;
      transform: translate3d(2000px, 0, 0) scaleX(2);
    }
}
.animation-bounce-out-right{animation-name: unAnimationBounceOutRight;}"
`;

exports[`animation selectors > animation bounceOutUp 1`] = `
"/* layer: default */
@keyframes unAnimationBounceOutUp {
20% {
      transform: translate3d(0, -10px, 0) scaleY(0.985);
    }

    40%,
    45% {
      opacity: 1;
      transform: translate3d(0, 20px, 0) scaleY(0.9);
    }

    to {
      opacity: 0;
      transform: translate3d(0, -2000px, 0) scaleY(3);
    }
}
.animation-bounce-out-up{animation-name: unAnimationBounceOutUp;}"
`;

exports[`animation selectors > animation bounceOutUp with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationBounceOutUp {
20% {
      transform: translate3d(0, -10px, 0) scaleY(0.985);
    }

    40%,
    45% {
      opacity: 1;
      transform: translate3d(0, 20px, 0) scaleY(0.9);
    }

    to {
      opacity: 0;
      transform: translate3d(0, -2000px, 0) scaleY(3);
    }
}
.animation-bounce-out-up{animation-name: unAnimationBounceOutUp;}"
`;

exports[`animation selectors > animation fadeIn 1`] = `
"/* layer: default */
@keyframes unAnimationFadeIn {
from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
}
.animation-fade-in{animation-name: unAnimationFadeIn;}"
`;

exports[`animation selectors > animation fadeIn with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeIn {
from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
}
.animation-fade-in{animation-name: unAnimationFadeIn;}"
`;

exports[`animation selectors > animation fadeInBottomLeft 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInBottomLeft {
from {
      opacity: 0;
      transform: translate3d(-100%, 100%, 0);
    }
    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-bottom-left{animation-name: unAnimationFadeInBottomLeft;}"
`;

exports[`animation selectors > animation fadeInBottomLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInBottomLeft {
from {
      opacity: 0;
      transform: translate3d(-100%, 100%, 0);
    }
    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-bottom-left{animation-name: unAnimationFadeInBottomLeft;}"
`;

exports[`animation selectors > animation fadeInBottomRight 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInBottomRight {
from {
      opacity: 0;
      transform: translate3d(100%, 100%, 0);
    }
    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-bottom-right{animation-name: unAnimationFadeInBottomRight;}"
`;

exports[`animation selectors > animation fadeInBottomRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInBottomRight {
from {
      opacity: 0;
      transform: translate3d(100%, 100%, 0);
    }
    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-bottom-right{animation-name: unAnimationFadeInBottomRight;}"
`;

exports[`animation selectors > animation fadeInDown 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInDown {
from {
      opacity: 0;
      transform: translate3d(0, -100%, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-down{animation-name: unAnimationFadeInDown;}"
`;

exports[`animation selectors > animation fadeInDown with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInDown {
from {
      opacity: 0;
      transform: translate3d(0, -100%, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-down{animation-name: unAnimationFadeInDown;}"
`;

exports[`animation selectors > animation fadeInDownBig 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInDownBig {
from {
      opacity: 0;
      transform: translate3d(0, -2000px, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-down-big{animation-name: unAnimationFadeInDownBig;}"
`;

exports[`animation selectors > animation fadeInDownBig with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInDownBig {
from {
      opacity: 0;
      transform: translate3d(0, -2000px, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-down-big{animation-name: unAnimationFadeInDownBig;}"
`;

exports[`animation selectors > animation fadeInLeft 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInLeft {
from {
      opacity: 0;
      transform: translate3d(-100%, 0, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-left{animation-name: unAnimationFadeInLeft;}"
`;

exports[`animation selectors > animation fadeInLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInLeft {
from {
      opacity: 0;
      transform: translate3d(-100%, 0, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-left{animation-name: unAnimationFadeInLeft;}"
`;

exports[`animation selectors > animation fadeInLeftBig 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInLeftBig {
from {
      opacity: 0;
      transform: translate3d(-2000px, 0, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-left-big{animation-name: unAnimationFadeInLeftBig;}"
`;

exports[`animation selectors > animation fadeInLeftBig with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInLeftBig {
from {
      opacity: 0;
      transform: translate3d(-2000px, 0, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-left-big{animation-name: unAnimationFadeInLeftBig;}"
`;

exports[`animation selectors > animation fadeInRight 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInRight {
from {
      opacity: 0;
      transform: translate3d(100%, 0, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-right{animation-name: unAnimationFadeInRight;}"
`;

exports[`animation selectors > animation fadeInRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInRight {
from {
      opacity: 0;
      transform: translate3d(100%, 0, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-right{animation-name: unAnimationFadeInRight;}"
`;

exports[`animation selectors > animation fadeInRightBig 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInRightBig {
from {
      opacity: 0;
      transform: translate3d(2000px, 0, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-right-big{animation-name: unAnimationFadeInRightBig;}"
`;

exports[`animation selectors > animation fadeInRightBig with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInRightBig {
from {
      opacity: 0;
      transform: translate3d(2000px, 0, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-right-big{animation-name: unAnimationFadeInRightBig;}"
`;

exports[`animation selectors > animation fadeInRightUp 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInRightUp {
from {
      opacity: 0;
      transform: translate3d(0, 100%, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-right-up{animation-name: unAnimationFadeInRightUp;}"
`;

exports[`animation selectors > animation fadeInRightUp with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInRightUp {
from {
      opacity: 0;
      transform: translate3d(0, 100%, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-right-up{animation-name: unAnimationFadeInRightUp;}"
`;

exports[`animation selectors > animation fadeInRightUpBig 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInRightUpBig {
from {
      opacity: 0;
      transform: translate3d(0, 2000px, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-right-up-big{animation-name: unAnimationFadeInRightUpBig;}"
`;

exports[`animation selectors > animation fadeInRightUpBig with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInRightUpBig {
from {
      opacity: 0;
      transform: translate3d(0, 2000px, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-right-up-big{animation-name: unAnimationFadeInRightUpBig;}"
`;

exports[`animation selectors > animation fadeInTopLeft 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInTopLeft {
from {
      opacity: 0;
      transform: translate3d(-100%, -100%, 0);
    }
    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-top-left{animation-name: unAnimationFadeInTopLeft;}"
`;

exports[`animation selectors > animation fadeInTopLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInTopLeft {
from {
      opacity: 0;
      transform: translate3d(-100%, -100%, 0);
    }
    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-top-left{animation-name: unAnimationFadeInTopLeft;}"
`;

exports[`animation selectors > animation fadeInTopRight 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInTopRight {
from {
      opacity: 0;
      transform: translate3d(100%, -100%, 0);
    }
    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-top-right{animation-name: unAnimationFadeInTopRight;}"
`;

exports[`animation selectors > animation fadeInTopRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInTopRight {
from {
      opacity: 0;
      transform: translate3d(100%, -100%, 0);
    }
    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-top-right{animation-name: unAnimationFadeInTopRight;}"
`;

exports[`animation selectors > animation fadeInUp 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInUp {
from {
      opacity: 0;
      transform: translate3d(0, 100%, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-up{animation-name: unAnimationFadeInUp;}"
`;

exports[`animation selectors > animation fadeInUp with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInUp {
from {
      opacity: 0;
      transform: translate3d(0, 100%, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-up{animation-name: unAnimationFadeInUp;}"
`;

exports[`animation selectors > animation fadeInUpBig 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInUpBig {
from {
      opacity: 0;
      transform: translate3d(0, 2000px, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-up-big{animation-name: unAnimationFadeInUpBig;}"
`;

exports[`animation selectors > animation fadeInUpBig with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeInUpBig {
from {
      opacity: 0;
      transform: translate3d(0, 2000px, 0);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-fade-in-up-big{animation-name: unAnimationFadeInUpBig;}"
`;

exports[`animation selectors > animation fadeOut 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOut {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
    }
}
.animation-fade-out{animation-name: unAnimationFadeOut;}"
`;

exports[`animation selectors > animation fadeOut with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOut {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
    }
}
.animation-fade-out{animation-name: unAnimationFadeOut;}"
`;

exports[`animation selectors > animation fadeOutBottomLeft 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutBottomLeft {
from {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
    to {
      opacity: 0;
      transform: translate3d(-100%, 100%, 0);
    }
}
.animation-fade-out-bottom-left{animation-name: unAnimationFadeOutBottomLeft;}"
`;

exports[`animation selectors > animation fadeOutBottomLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutBottomLeft {
from {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
    to {
      opacity: 0;
      transform: translate3d(-100%, 100%, 0);
    }
}
.animation-fade-out-bottom-left{animation-name: unAnimationFadeOutBottomLeft;}"
`;

exports[`animation selectors > animation fadeOutBottomRight 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutBottomRight {
from {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
    to {
      opacity: 0;
      transform: translate3d(100%, 100%, 0);
    }
}
.animation-fade-out-bottom-right{animation-name: unAnimationFadeOutBottomRight;}"
`;

exports[`animation selectors > animation fadeOutBottomRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutBottomRight {
from {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
    to {
      opacity: 0;
      transform: translate3d(100%, 100%, 0);
    }
}
.animation-fade-out-bottom-right{animation-name: unAnimationFadeOutBottomRight;}"
`;

exports[`animation selectors > animation fadeOutDown 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutDown {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(0, 100%, 0);
    }
}
.animation-fade-out-down{animation-name: unAnimationFadeOutDown;}"
`;

exports[`animation selectors > animation fadeOutDown with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutDown {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(0, 100%, 0);
    }
}
.animation-fade-out-down{animation-name: unAnimationFadeOutDown;}"
`;

exports[`animation selectors > animation fadeOutDownBig 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutDownBig {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(0, 2000px, 0);
    }
}
.animation-fade-out-down-big{animation-name: unAnimationFadeOutDownBig;}"
`;

exports[`animation selectors > animation fadeOutDownBig with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutDownBig {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(0, 2000px, 0);
    }
}
.animation-fade-out-down-big{animation-name: unAnimationFadeOutDownBig;}"
`;

exports[`animation selectors > animation fadeOutLeft 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutLeft {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(-100%, 0, 0);
    }
}
.animation-fade-out-left{animation-name: unAnimationFadeOutLeft;}"
`;

exports[`animation selectors > animation fadeOutLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutLeft {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(-100%, 0, 0);
    }
}
.animation-fade-out-left{animation-name: unAnimationFadeOutLeft;}"
`;

exports[`animation selectors > animation fadeOutLeftBig 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutLeftBig {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(-2000px, 0, 0);
    }
}
.animation-fade-out-left-big{animation-name: unAnimationFadeOutLeftBig;}"
`;

exports[`animation selectors > animation fadeOutLeftBig with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutLeftBig {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(-2000px, 0, 0);
    }
}
.animation-fade-out-left-big{animation-name: unAnimationFadeOutLeftBig;}"
`;

exports[`animation selectors > animation fadeOutRight 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutRight {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(100%, 0, 0);
    }
}
.animation-fade-out-right{animation-name: unAnimationFadeOutRight;}"
`;

exports[`animation selectors > animation fadeOutRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutRight {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(100%, 0, 0);
    }
}
.animation-fade-out-right{animation-name: unAnimationFadeOutRight;}"
`;

exports[`animation selectors > animation fadeOutRightBig 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutRightBig {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(2000px, 0, 0);
    }
}
.animation-fade-out-right-big{animation-name: unAnimationFadeOutRightBig;}"
`;

exports[`animation selectors > animation fadeOutRightBig with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutRightBig {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(2000px, 0, 0);
    }
}
.animation-fade-out-right-big{animation-name: unAnimationFadeOutRightBig;}"
`;

exports[`animation selectors > animation fadeOutTopLeft 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutTopLeft {
from {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
    to {
      opacity: 0;
      transform: translate3d(-100%, -100%, 0);
    }
}
.animation-fade-out-top-left{animation-name: unAnimationFadeOutTopLeft;}"
`;

exports[`animation selectors > animation fadeOutTopLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutTopLeft {
from {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
    to {
      opacity: 0;
      transform: translate3d(-100%, -100%, 0);
    }
}
.animation-fade-out-top-left{animation-name: unAnimationFadeOutTopLeft;}"
`;

exports[`animation selectors > animation fadeOutTopRight 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutTopRight {
from {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
    to {
      opacity: 0;
      transform: translate3d(100%, -100%, 0);
    }
}
.animation-fade-out-top-right{animation-name: unAnimationFadeOutTopRight;}"
`;

exports[`animation selectors > animation fadeOutTopRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutTopRight {
from {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
    to {
      opacity: 0;
      transform: translate3d(100%, -100%, 0);
    }
}
.animation-fade-out-top-right{animation-name: unAnimationFadeOutTopRight;}"
`;

exports[`animation selectors > animation fadeOutUp 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutUp {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(0, -100%, 0);
    }
}
.animation-fade-out-up{animation-name: unAnimationFadeOutUp;}"
`;

exports[`animation selectors > animation fadeOutUp with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutUp {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(0, -100%, 0);
    }
}
.animation-fade-out-up{animation-name: unAnimationFadeOutUp;}"
`;

exports[`animation selectors > animation fadeOutUpBig 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutUpBig {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(0, -2000px, 0);
    }
}
.animation-fade-out-up-big{animation-name: unAnimationFadeOutUpBig;}"
`;

exports[`animation selectors > animation fadeOutUpBig with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFadeOutUpBig {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(0, -2000px, 0);
    }
}
.animation-fade-out-up-big{animation-name: unAnimationFadeOutUpBig;}"
`;

exports[`animation selectors > animation flash 1`] = `
"/* layer: default */
@keyframes unAnimationFlash {
from,
    50%,
    to {
      opacity: 1;
    }

    25%,
    75% {
      opacity: 0;
    }
}
.animation-flash{animation-name: unAnimationFlash;}"
`;

exports[`animation selectors > animation flash with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFlash {
from,
    50%,
    to {
      opacity: 1;
    }

    25%,
    75% {
      opacity: 0;
    }
}
.animation-flash{animation-name: unAnimationFlash;}"
`;

exports[`animation selectors > animation flip 1`] = `
"/* layer: default */
@keyframes unAnimationFlip {
from {
      transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 0) rotate3d(0, 1, 0, -360deg);
      animation-timing-function: ease-out;
    }

    40% {
      transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 150px)
        rotate3d(0, 1, 0, -190deg);
      animation-timing-function: ease-out;
    }

    50% {
      transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 150px)
        rotate3d(0, 1, 0, -170deg);
      animation-timing-function: ease-in;
    }

    80% {
      transform: perspective(400px) scale3d(0.95, 0.95, 0.95) translate3d(0, 0, 0)
        rotate3d(0, 1, 0, 0deg);
      animation-timing-function: ease-in;
    }

    to {
      transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 0) rotate3d(0, 1, 0, 0deg);
      animation-timing-function: ease-in;
    }
}
.animation-flip{animation-name: unAnimationFlip; backface-visibility: visible;}"
`;

exports[`animation selectors > animation flip with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFlip {
from {
      transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 0) rotate3d(0, 1, 0, -360deg);
      animation-timing-function: ease-out;
    }

    40% {
      transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 150px)
        rotate3d(0, 1, 0, -190deg);
      animation-timing-function: ease-out;
    }

    50% {
      transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 150px)
        rotate3d(0, 1, 0, -170deg);
      animation-timing-function: ease-in;
    }

    80% {
      transform: perspective(400px) scale3d(0.95, 0.95, 0.95) translate3d(0, 0, 0)
        rotate3d(0, 1, 0, 0deg);
      animation-timing-function: ease-in;
    }

    to {
      transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 0) rotate3d(0, 1, 0, 0deg);
      animation-timing-function: ease-in;
    }
}
.animation-flip{animation-name: unAnimationFlip; backface-visibility: visible;}"
`;

exports[`animation selectors > animation flipInX 1`] = `
"/* layer: default */
@keyframes unAnimationFlipInX {
from {
      transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
      animation-timing-function: ease-in;
      opacity: 0;
    }

    40% {
      transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
      animation-timing-function: ease-in;
    }

    60% {
      transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
      opacity: 1;
    }

    80% {
      transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
    }

    to {
      transform: perspective(400px);
    }
}
.animation-flip-in-x{animation-name: unAnimationFlipInX; backface-visibility: visible !important;}"
`;

exports[`animation selectors > animation flipInX with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFlipInX {
from {
      transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
      animation-timing-function: ease-in;
      opacity: 0;
    }

    40% {
      transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
      animation-timing-function: ease-in;
    }

    60% {
      transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
      opacity: 1;
    }

    80% {
      transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
    }

    to {
      transform: perspective(400px);
    }
}
.animation-flip-in-x{animation-name: unAnimationFlipInX; backface-visibility: visible !important;}"
`;

exports[`animation selectors > animation flipInY 1`] = `
"/* layer: default */
@keyframes unAnimationFlipInY {
from {
      transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
      animation-timing-function: ease-in;
      opacity: 0;
    }

    40% {
      transform: perspective(400px) rotate3d(0, 1, 0, -20deg);
      animation-timing-function: ease-in;
    }

    60% {
      transform: perspective(400px) rotate3d(0, 1, 0, 10deg);
      opacity: 1;
    }

    80% {
      transform: perspective(400px) rotate3d(0, 1, 0, -5deg);
    }

    to {
      transform: perspective(400px);
    }
}
.animation-flip-in-y{animation-name: unAnimationFlipInY; backface-visibility: visible !important;}"
`;

exports[`animation selectors > animation flipInY with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFlipInY {
from {
      transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
      animation-timing-function: ease-in;
      opacity: 0;
    }

    40% {
      transform: perspective(400px) rotate3d(0, 1, 0, -20deg);
      animation-timing-function: ease-in;
    }

    60% {
      transform: perspective(400px) rotate3d(0, 1, 0, 10deg);
      opacity: 1;
    }

    80% {
      transform: perspective(400px) rotate3d(0, 1, 0, -5deg);
    }

    to {
      transform: perspective(400px);
    }
}
.animation-flip-in-y{animation-name: unAnimationFlipInY; backface-visibility: visible !important;}"
`;

exports[`animation selectors > animation flipOutX 1`] = `
"/* layer: default */
@keyframes unAnimationFlipOutX {
from {
      transform: perspective(400px);
    }

    30% {
      transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
      opacity: 1;
    }

    to {
      transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
      opacity: 0;
    }
}
.animation-flip-out-x{animation-name: unAnimationFlipOutX; animation-duration: calc(var(--un-animate-duration) * 0.75);
    backface-visibility: visible !important;}"
`;

exports[`animation selectors > animation flipOutX with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFlipOutX {
from {
      transform: perspective(400px);
    }

    30% {
      transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
      opacity: 1;
    }

    to {
      transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
      opacity: 0;
    }
}
.animation-flip-out-x{animation-name: unAnimationFlipOutX; animation-duration: calc(var(--foo-bar-duration) * 0.75);
    backface-visibility: visible !important;}"
`;

exports[`animation selectors > animation flipOutY 1`] = `
"/* layer: default */
@keyframes unAnimationFlipOutY {
from {
      transform: perspective(400px);
    }

    30% {
      transform: perspective(400px) rotate3d(0, 1, 0, -15deg);
      opacity: 1;
    }

    to {
      transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
      opacity: 0;
    }
}
.animation-flip-out-y{animation-name: unAnimationFlipOutY; animation-duration: calc(var(--un-animate-duration) * 0.75);
    backface-visibility: visible !important;}"
`;

exports[`animation selectors > animation flipOutY with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationFlipOutY {
from {
      transform: perspective(400px);
    }

    30% {
      transform: perspective(400px) rotate3d(0, 1, 0, -15deg);
      opacity: 1;
    }

    to {
      transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
      opacity: 0;
    }
}
.animation-flip-out-y{animation-name: unAnimationFlipOutY; animation-duration: calc(var(--foo-bar-duration) * 0.75);
    backface-visibility: visible !important;}"
`;

exports[`animation selectors > animation headShake 1`] = `
"/* layer: default */
@keyframes unAnimationHeadShake {
0% {
      transform: translateX(0);
    }

    6.5% {
      transform: translateX(-6px) rotateY(-9deg);
    }

    18.5% {
      transform: translateX(5px) rotateY(7deg);
    }

    31.5% {
      transform: translateX(-3px) rotateY(-5deg);
    }

    43.5% {
      transform: translateX(2px) rotateY(3deg);
    }

    50% {
      transform: translateX(0);
    }
}
.animation-head-shake{animation-name: unAnimationHeadShake; animation-timing-function: ease-in-out;}"
`;

exports[`animation selectors > animation headShake with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationHeadShake {
0% {
      transform: translateX(0);
    }

    6.5% {
      transform: translateX(-6px) rotateY(-9deg);
    }

    18.5% {
      transform: translateX(5px) rotateY(7deg);
    }

    31.5% {
      transform: translateX(-3px) rotateY(-5deg);
    }

    43.5% {
      transform: translateX(2px) rotateY(3deg);
    }

    50% {
      transform: translateX(0);
    }
}
.animation-head-shake{animation-name: unAnimationHeadShake; animation-timing-function: ease-in-out;}"
`;

exports[`animation selectors > animation heartBeat 1`] = `
"/* layer: default */
@keyframes unAnimationHeartBeat {
0% {
      transform: scale(1);
    }

    14% {
      transform: scale(1.3);
    }

    28% {
      transform: scale(1);
    }

    42% {
      transform: scale(1.3);
    }

    70% {
      transform: scale(1);
    }
}
.animation-heart-beat{animation-name: unAnimationHeartBeat; animation-timing-function: ease-in-out;
    animation-duration: calc(var(--un-animate-duration) * 1.3);}"
`;

exports[`animation selectors > animation heartBeat with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationHeartBeat {
0% {
      transform: scale(1);
    }

    14% {
      transform: scale(1.3);
    }

    28% {
      transform: scale(1);
    }

    42% {
      transform: scale(1.3);
    }

    70% {
      transform: scale(1);
    }
}
.animation-heart-beat{animation-name: unAnimationHeartBeat; animation-timing-function: ease-in-out;
    animation-duration: calc(var(--foo-bar-duration) * 1.3);}"
`;

exports[`animation selectors > animation hinge 1`] = `
"/* layer: default */
@keyframes unAnimationHinge {
0% {
      animation-timing-function: ease-in-out;
    }

    20%,
    60% {
      transform: rotate3d(0, 0, 1, 80deg);
      animation-timing-function: ease-in-out;
    }

    40%,
    80% {
      transform: rotate3d(0, 0, 1, 60deg);
      animation-timing-function: ease-in-out;
      opacity: 1;
    }

    to {
      transform: translate3d(0, 700px, 0);
      opacity: 0;
    }
}
.animation-hinge{animation-name: unAnimationHinge; transform-origin: top left;
    animation-duration: calc(var(--un-animate-duration) * 2);}"
`;

exports[`animation selectors > animation hinge with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationHinge {
0% {
      animation-timing-function: ease-in-out;
    }

    20%,
    60% {
      transform: rotate3d(0, 0, 1, 80deg);
      animation-timing-function: ease-in-out;
    }

    40%,
    80% {
      transform: rotate3d(0, 0, 1, 60deg);
      animation-timing-function: ease-in-out;
      opacity: 1;
    }

    to {
      transform: translate3d(0, 700px, 0);
      opacity: 0;
    }
}
.animation-hinge{animation-name: unAnimationHinge; transform-origin: top left;
    animation-duration: calc(var(--foo-bar-duration) * 2);}"
`;

exports[`animation selectors > animation jackInTheBox 1`] = `
"/* layer: default */
@keyframes unAnimationJackInTheBox {
from {
      opacity: 0;
      transform: scale(0.1) rotate(30deg);
      transform-origin: center bottom;
    }

    50% {
      transform: rotate(-10deg);
    }

    70% {
      transform: rotate(3deg);
    }

    to {
      opacity: 1;
      transform: scale(1);
    }
}
.animation-jack-in-the-box{animation-name: unAnimationJackInTheBox;}"
`;

exports[`animation selectors > animation jackInTheBox with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationJackInTheBox {
from {
      opacity: 0;
      transform: scale(0.1) rotate(30deg);
      transform-origin: center bottom;
    }

    50% {
      transform: rotate(-10deg);
    }

    70% {
      transform: rotate(3deg);
    }

    to {
      opacity: 1;
      transform: scale(1);
    }
}
.animation-jack-in-the-box{animation-name: unAnimationJackInTheBox;}"
`;

exports[`animation selectors > animation jello 1`] = `
"/* layer: default */
@keyframes unAnimationJello {
from,
    11.1%,
    to {
      transform: translate3d(0, 0, 0);
    }

    22.2% {
      transform: skewX(-12.5deg) skewY(-12.5deg);
    }

    33.3% {
      transform: skewX(6.25deg) skewY(6.25deg);
    }

    44.4% {
      transform: skewX(-3.125deg) skewY(-3.125deg);
    }

    55.5% {
      transform: skewX(1.5625deg) skewY(1.5625deg);
    }

    66.6% {
      transform: skewX(-0.78125deg) skewY(-0.78125deg);
    }

    77.7% {
      transform: skewX(0.390625deg) skewY(0.390625deg);
    }

    88.8% {
      transform: skewX(-0.1953125deg) skewY(-0.1953125deg);
    }
}
.animation-jello{animation-name: unAnimationJello; transform-origin: center;}"
`;

exports[`animation selectors > animation jello with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationJello {
from,
    11.1%,
    to {
      transform: translate3d(0, 0, 0);
    }

    22.2% {
      transform: skewX(-12.5deg) skewY(-12.5deg);
    }

    33.3% {
      transform: skewX(6.25deg) skewY(6.25deg);
    }

    44.4% {
      transform: skewX(-3.125deg) skewY(-3.125deg);
    }

    55.5% {
      transform: skewX(1.5625deg) skewY(1.5625deg);
    }

    66.6% {
      transform: skewX(-0.78125deg) skewY(-0.78125deg);
    }

    77.7% {
      transform: skewX(0.390625deg) skewY(0.390625deg);
    }

    88.8% {
      transform: skewX(-0.1953125deg) skewY(-0.1953125deg);
    }
}
.animation-jello{animation-name: unAnimationJello; transform-origin: center;}"
`;

exports[`animation selectors > animation lightSpeedInLeft 1`] = `
"/* layer: default */
@keyframes unAnimationLightSpeedInLeft {
from {
      transform: translate3d(-100%, 0, 0) skewX(30deg);
      opacity: 0;
    }

    60% {
      transform: skewX(-20deg);
      opacity: 1;
    }

    80% {
      transform: skewX(5deg);
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-light-speed-in-left{animation-name: unAnimationLightSpeedInLeft; animation-timing-function: ease-out;}"
`;

exports[`animation selectors > animation lightSpeedInLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationLightSpeedInLeft {
from {
      transform: translate3d(-100%, 0, 0) skewX(30deg);
      opacity: 0;
    }

    60% {
      transform: skewX(-20deg);
      opacity: 1;
    }

    80% {
      transform: skewX(5deg);
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-light-speed-in-left{animation-name: unAnimationLightSpeedInLeft; animation-timing-function: ease-out;}"
`;

exports[`animation selectors > animation lightSpeedInRight 1`] = `
"/* layer: default */
@keyframes unAnimationLightSpeedInRight {
from {
      transform: translate3d(100%, 0, 0) skewX(-30deg);
      opacity: 0;
    }

    60% {
      transform: skewX(20deg);
      opacity: 1;
    }

    80% {
      transform: skewX(-5deg);
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-light-speed-in-right{animation-name: unAnimationLightSpeedInRight; animation-timing-function: ease-out;}"
`;

exports[`animation selectors > animation lightSpeedInRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationLightSpeedInRight {
from {
      transform: translate3d(100%, 0, 0) skewX(-30deg);
      opacity: 0;
    }

    60% {
      transform: skewX(20deg);
      opacity: 1;
    }

    80% {
      transform: skewX(-5deg);
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-light-speed-in-right{animation-name: unAnimationLightSpeedInRight; animation-timing-function: ease-out;}"
`;

exports[`animation selectors > animation lightSpeedOutLeft 1`] = `
"/* layer: default */
@keyframes unAnimationLightSpeedOutLeft {
from {
      opacity: 1;
    }

    to {
      transform: translate3d(-100%, 0, 0) skewX(-30deg);
      opacity: 0;
    }
}
.animation-light-speed-out-left{animation-name: unAnimationLightSpeedOutLeft; animation-timing-function: ease-in;}"
`;

exports[`animation selectors > animation lightSpeedOutLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationLightSpeedOutLeft {
from {
      opacity: 1;
    }

    to {
      transform: translate3d(-100%, 0, 0) skewX(-30deg);
      opacity: 0;
    }
}
.animation-light-speed-out-left{animation-name: unAnimationLightSpeedOutLeft; animation-timing-function: ease-in;}"
`;

exports[`animation selectors > animation lightSpeedOutRight 1`] = `
"/* layer: default */
@keyframes unAnimationLightSpeedOutRight {
from {
      opacity: 1;
    }

    to {
      transform: translate3d(100%, 0, 0) skewX(30deg);
      opacity: 0;
    }
}
.animation-light-speed-out-right{animation-name: unAnimationLightSpeedOutRight; animation-timing-function: ease-in;}"
`;

exports[`animation selectors > animation lightSpeedOutRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationLightSpeedOutRight {
from {
      opacity: 1;
    }

    to {
      transform: translate3d(100%, 0, 0) skewX(30deg);
      opacity: 0;
    }
}
.animation-light-speed-out-right{animation-name: unAnimationLightSpeedOutRight; animation-timing-function: ease-in;}"
`;

exports[`animation selectors > animation pulse 1`] = `
"/* layer: default */
@keyframes unAnimationPulse {
from {
      transform: scale3d(1, 1, 1);
    }

    50% {
      transform: scale3d(1.05, 1.05, 1.05);
    }

    to {
      transform: scale3d(1, 1, 1);
    }
}
.animation-pulse{animation-name: unAnimationPulse; animation-timing-function: ease-in-out;}"
`;

exports[`animation selectors > animation pulse with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationPulse {
from {
      transform: scale3d(1, 1, 1);
    }

    50% {
      transform: scale3d(1.05, 1.05, 1.05);
    }

    to {
      transform: scale3d(1, 1, 1);
    }
}
.animation-pulse{animation-name: unAnimationPulse; animation-timing-function: ease-in-out;}"
`;

exports[`animation selectors > animation rollIn 1`] = `
"/* layer: default */
@keyframes unAnimationRollIn {
from {
      opacity: 0;
      transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-roll-in{animation-name: unAnimationRollIn;}"
`;

exports[`animation selectors > animation rollIn with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationRollIn {
from {
      opacity: 0;
      transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
    }

    to {
      opacity: 1;
      transform: translate3d(0, 0, 0);
    }
}
.animation-roll-in{animation-name: unAnimationRollIn;}"
`;

exports[`animation selectors > animation rollOut 1`] = `
"/* layer: default */
@keyframes unAnimationRollOut {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(100%, 0, 0) rotate3d(0, 0, 1, 120deg);
    }
}
.animation-roll-out{animation-name: unAnimationRollOut;}"
`;

exports[`animation selectors > animation rollOut with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationRollOut {
from {
      opacity: 1;
    }

    to {
      opacity: 0;
      transform: translate3d(100%, 0, 0) rotate3d(0, 0, 1, 120deg);
    }
}
.animation-roll-out{animation-name: unAnimationRollOut;}"
`;

exports[`animation selectors > animation rotateIn 1`] = `
"/* layer: default */
@keyframes unAnimationRotateIn {
from {
      transform: rotate3d(0, 0, 1, -200deg);
      opacity: 0;
    }

    to {
      transform: translate3d(0, 0, 0);
      opacity: 1;
    }
}
.animation-rotate-in{animation-name: unAnimationRotateIn; transform-origin: center;}"
`;

exports[`animation selectors > animation rotateIn with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationRotateIn {
from {
      transform: rotate3d(0, 0, 1, -200deg);
      opacity: 0;
    }

    to {
      transform: translate3d(0, 0, 0);
      opacity: 1;
    }
}
.animation-rotate-in{animation-name: unAnimationRotateIn; transform-origin: center;}"
`;

exports[`animation selectors > animation rotateInDownLeft 1`] = `
"/* layer: default */
@keyframes unAnimationRotateInDownLeft {
from {
      transform: rotate3d(0, 0, 1, -45deg);
      opacity: 0;
    }

    to {
      transform: translate3d(0, 0, 0);
      opacity: 1;
    }
}
.animation-rotate-in-down-left{animation-name: unAnimationRotateInDownLeft; transform-origin: left bottom;}"
`;

exports[`animation selectors > animation rotateInDownLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationRotateInDownLeft {
from {
      transform: rotate3d(0, 0, 1, -45deg);
      opacity: 0;
    }

    to {
      transform: translate3d(0, 0, 0);
      opacity: 1;
    }
}
.animation-rotate-in-down-left{animation-name: unAnimationRotateInDownLeft; transform-origin: left bottom;}"
`;

exports[`animation selectors > animation rotateInDownRight 1`] = `
"/* layer: default */
@keyframes unAnimationRotateInDownRight {
from {
      transform: rotate3d(0, 0, 1, 45deg);
      opacity: 0;
    }

    to {
      transform: translate3d(0, 0, 0);
      opacity: 1;
    }
}
.animation-rotate-in-down-right{animation-name: unAnimationRotateInDownRight; transform-origin: right bottom;}"
`;

exports[`animation selectors > animation rotateInDownRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationRotateInDownRight {
from {
      transform: rotate3d(0, 0, 1, 45deg);
      opacity: 0;
    }

    to {
      transform: translate3d(0, 0, 0);
      opacity: 1;
    }
}
.animation-rotate-in-down-right{animation-name: unAnimationRotateInDownRight; transform-origin: right bottom;}"
`;

exports[`animation selectors > animation rotateInUpLeft 1`] = `
"/* layer: default */
@keyframes unAnimationRotateInUpLeft {
from {
      transform: rotate3d(0, 0, 1, 45deg);
      opacity: 0;
    }

    to {
      transform: translate3d(0, 0, 0);
      opacity: 1;
    }
}
.animation-rotate-in-up-left{animation-name: unAnimationRotateInUpLeft; transform-origin: left bottom;}"
`;

exports[`animation selectors > animation rotateInUpLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationRotateInUpLeft {
from {
      transform: rotate3d(0, 0, 1, 45deg);
      opacity: 0;
    }

    to {
      transform: translate3d(0, 0, 0);
      opacity: 1;
    }
}
.animation-rotate-in-up-left{animation-name: unAnimationRotateInUpLeft; transform-origin: left bottom;}"
`;

exports[`animation selectors > animation rotateInUpRight 1`] = `
"/* layer: default */
@keyframes unAnimationRotateInUpRight {
from {
      transform: rotate3d(0, 0, 1, -90deg);
      opacity: 0;
    }

    to {
      transform: translate3d(0, 0, 0);
      opacity: 1;
    }
}
.animation-rotate-in-up-right{animation-name: unAnimationRotateInUpRight; transform-origin: right bottom;}"
`;

exports[`animation selectors > animation rotateInUpRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationRotateInUpRight {
from {
      transform: rotate3d(0, 0, 1, -90deg);
      opacity: 0;
    }

    to {
      transform: translate3d(0, 0, 0);
      opacity: 1;
    }
}
.animation-rotate-in-up-right{animation-name: unAnimationRotateInUpRight; transform-origin: right bottom;}"
`;

exports[`animation selectors > animation rotateOut 1`] = `
"/* layer: default */
@keyframes unAnimationRotateOut {
from {
      opacity: 1;
    }

    to {
      transform: rotate3d(0, 0, 1, 200deg);
      opacity: 0;
    }
}
.animation-rotate-out{animation-name: unAnimationRotateOut; transform-origin: center;}"
`;

exports[`animation selectors > animation rotateOut with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationRotateOut {
from {
      opacity: 1;
    }

    to {
      transform: rotate3d(0, 0, 1, 200deg);
      opacity: 0;
    }
}
.animation-rotate-out{animation-name: unAnimationRotateOut; transform-origin: center;}"
`;

exports[`animation selectors > animation rotateOutDownLeft 1`] = `
"/* layer: default */
@keyframes unAnimationRotateOutDownLeft {
from {
      opacity: 1;
    }

    to {
      transform: rotate3d(0, 0, 1, 45deg);
      opacity: 0;
    }
}
.animation-rotate-out-down-left{animation-name: unAnimationRotateOutDownLeft; transform-origin: left bottom;}"
`;

exports[`animation selectors > animation rotateOutDownLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationRotateOutDownLeft {
from {
      opacity: 1;
    }

    to {
      transform: rotate3d(0, 0, 1, 45deg);
      opacity: 0;
    }
}
.animation-rotate-out-down-left{animation-name: unAnimationRotateOutDownLeft; transform-origin: left bottom;}"
`;

exports[`animation selectors > animation rotateOutDownRight 1`] = `
"/* layer: default */
@keyframes unAnimationRotateOutDownRight {
from {
      opacity: 1;
    }

    to {
      transform: rotate3d(0, 0, 1, -45deg);
      opacity: 0;
    }
}
.animation-rotate-out-down-right{animation-name: unAnimationRotateOutDownRight; transform-origin: right bottom;}"
`;

exports[`animation selectors > animation rotateOutDownRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationRotateOutDownRight {
from {
      opacity: 1;
    }

    to {
      transform: rotate3d(0, 0, 1, -45deg);
      opacity: 0;
    }
}
.animation-rotate-out-down-right{animation-name: unAnimationRotateOutDownRight; transform-origin: right bottom;}"
`;

exports[`animation selectors > animation rotateOutUpLeft 1`] = `
"/* layer: default */
@keyframes unAnimationRotateOutUpLeft {
from {
      opacity: 1;
    }

    to {
      transform: rotate3d(0, 0, 1, -45deg);
      opacity: 0;
    }
}
.animation-rotate-out-up-left{animation-name: unAnimationRotateOutUpLeft; transform-origin: left bottom;}"
`;

exports[`animation selectors > animation rotateOutUpLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationRotateOutUpLeft {
from {
      opacity: 1;
    }

    to {
      transform: rotate3d(0, 0, 1, -45deg);
      opacity: 0;
    }
}
.animation-rotate-out-up-left{animation-name: unAnimationRotateOutUpLeft; transform-origin: left bottom;}"
`;

exports[`animation selectors > animation rotateOutUpRight 1`] = `
"/* layer: default */
@keyframes unAnimationRotateOutUpRight {
from {
      opacity: 1;
    }

    to {
      transform: rotate3d(0, 0, 1, 90deg);
      opacity: 0;
    }
}
.animation-rotate-out-up-right{animation-name: unAnimationRotateOutUpRight; transform-origin: right bottom;}"
`;

exports[`animation selectors > animation rotateOutUpRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationRotateOutUpRight {
from {
      opacity: 1;
    }

    to {
      transform: rotate3d(0, 0, 1, 90deg);
      opacity: 0;
    }
}
.animation-rotate-out-up-right{animation-name: unAnimationRotateOutUpRight; transform-origin: right bottom;}"
`;

exports[`animation selectors > animation rubberBand 1`] = `
"/* layer: default */
@keyframes unAnimationRubberBand {
from {
      transform: scale3d(1, 1, 1);
    }

    30% {
      transform: scale3d(1.25, 0.75, 1);
    }

    40% {
      transform: scale3d(0.75, 1.25, 1);
    }

    50% {
      transform: scale3d(1.15, 0.85, 1);
    }

    65% {
      transform: scale3d(0.95, 1.05, 1);
    }

    75% {
      transform: scale3d(1.05, 0.95, 1);
    }

    to {
      transform: scale3d(1, 1, 1);
    }
}
.animation-rubber-band{animation-name: unAnimationRubberBand;}"
`;

exports[`animation selectors > animation rubberBand with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationRubberBand {
from {
      transform: scale3d(1, 1, 1);
    }

    30% {
      transform: scale3d(1.25, 0.75, 1);
    }

    40% {
      transform: scale3d(0.75, 1.25, 1);
    }

    50% {
      transform: scale3d(1.15, 0.85, 1);
    }

    65% {
      transform: scale3d(0.95, 1.05, 1);
    }

    75% {
      transform: scale3d(1.05, 0.95, 1);
    }

    to {
      transform: scale3d(1, 1, 1);
    }
}
.animation-rubber-band{animation-name: unAnimationRubberBand;}"
`;

exports[`animation selectors > animation shake 1`] = `
"/* layer: default */
@keyframes unAnimationShake {
from,
    to {
      transform: translate3d(0, 0, 0);
    }

    10%,
    30%,
    50%,
    70%,
    90% {
      transform: translate3d(-10px, 0, 0);
    }

    20%,
    40%,
    60%,
    80% {
      transform: translate3d(10px, 0, 0);
    }
}
.animation-shake{animation-name: unAnimationShake;}"
`;

exports[`animation selectors > animation shake with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationShake {
from,
    to {
      transform: translate3d(0, 0, 0);
    }

    10%,
    30%,
    50%,
    70%,
    90% {
      transform: translate3d(-10px, 0, 0);
    }

    20%,
    40%,
    60%,
    80% {
      transform: translate3d(10px, 0, 0);
    }
}
.animation-shake{animation-name: unAnimationShake;}"
`;

exports[`animation selectors > animation shakeX 1`] = `
"/* layer: default */
@keyframes unAnimationShakeX {
from,
    to {
      transform: translate3d(0, 0, 0);
    }

    10%,
    30%,
    50%,
    70%,
    90% {
      transform: translate3d(-10px, 0, 0);
    }

    20%,
    40%,
    60%,
    80% {
      transform: translate3d(10px, 0, 0);
    }
}
.animation-shake-x{animation-name: unAnimationShakeX;}"
`;

exports[`animation selectors > animation shakeX with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationShakeX {
from,
    to {
      transform: translate3d(0, 0, 0);
    }

    10%,
    30%,
    50%,
    70%,
    90% {
      transform: translate3d(-10px, 0, 0);
    }

    20%,
    40%,
    60%,
    80% {
      transform: translate3d(10px, 0, 0);
    }
}
.animation-shake-x{animation-name: unAnimationShakeX;}"
`;

exports[`animation selectors > animation shakeY 1`] = `
"/* layer: default */
@keyframes unAnimationShakeY {
from,
    to {
      transform: translate3d(0, 0, 0);
    }

    10%,
    30%,
    50%,
    70%,
    90% {
      transform: translate3d(0, -10px, 0);
    }

    20%,
    40%,
    60%,
    80% {
      transform: translate3d(0, 10px, 0);
    }
}
.animation-shake-y{animation-name: unAnimationShakeY;}"
`;

exports[`animation selectors > animation shakeY with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationShakeY {
from,
    to {
      transform: translate3d(0, 0, 0);
    }

    10%,
    30%,
    50%,
    70%,
    90% {
      transform: translate3d(0, -10px, 0);
    }

    20%,
    40%,
    60%,
    80% {
      transform: translate3d(0, 10px, 0);
    }
}
.animation-shake-y{animation-name: unAnimationShakeY;}"
`;

exports[`animation selectors > animation slideInDown 1`] = `
"/* layer: default */
@keyframes unAnimationSlideInDown {
from {
      transform: translate3d(0, -100%, 0);
      visibility: visible;
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-slide-in-down{animation-name: unAnimationSlideInDown;}"
`;

exports[`animation selectors > animation slideInDown with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationSlideInDown {
from {
      transform: translate3d(0, -100%, 0);
      visibility: visible;
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-slide-in-down{animation-name: unAnimationSlideInDown;}"
`;

exports[`animation selectors > animation slideInLeft 1`] = `
"/* layer: default */
@keyframes unAnimationSlideInLeft {
from {
      transform: translate3d(-100%, 0, 0);
      visibility: visible;
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-slide-in-left{animation-name: unAnimationSlideInLeft;}"
`;

exports[`animation selectors > animation slideInLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationSlideInLeft {
from {
      transform: translate3d(-100%, 0, 0);
      visibility: visible;
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-slide-in-left{animation-name: unAnimationSlideInLeft;}"
`;

exports[`animation selectors > animation slideInRight 1`] = `
"/* layer: default */
@keyframes unAnimationSlideInRight {
from {
      transform: translate3d(100%, 0, 0);
      visibility: visible;
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-slide-in-right{animation-name: unAnimationSlideInRight;}"
`;

exports[`animation selectors > animation slideInRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationSlideInRight {
from {
      transform: translate3d(100%, 0, 0);
      visibility: visible;
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-slide-in-right{animation-name: unAnimationSlideInRight;}"
`;

exports[`animation selectors > animation slideInUp 1`] = `
"/* layer: default */
@keyframes unAnimationSlideInUp {
from {
      transform: translate3d(0, 100%, 0);
      visibility: visible;
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-slide-in-up{animation-name: unAnimationSlideInUp;}"
`;

exports[`animation selectors > animation slideInUp with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationSlideInUp {
from {
      transform: translate3d(0, 100%, 0);
      visibility: visible;
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-slide-in-up{animation-name: unAnimationSlideInUp;}"
`;

exports[`animation selectors > animation slideOutDown 1`] = `
"/* layer: default */
@keyframes unAnimationSlideOutDown {
from {
      transform: translate3d(0, 0, 0);
    }

    to {
      visibility: hidden;
      transform: translate3d(0, 100%, 0);
    }
}
.animation-slide-out-down{animation-name: unAnimationSlideOutDown;}"
`;

exports[`animation selectors > animation slideOutDown with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationSlideOutDown {
from {
      transform: translate3d(0, 0, 0);
    }

    to {
      visibility: hidden;
      transform: translate3d(0, 100%, 0);
    }
}
.animation-slide-out-down{animation-name: unAnimationSlideOutDown;}"
`;

exports[`animation selectors > animation slideOutLeft 1`] = `
"/* layer: default */
@keyframes unAnimationSlideOutLeft {
from {
      transform: translate3d(0, 0, 0);
    }

    to {
      visibility: hidden;
      transform: translate3d(-100%, 0, 0);
    }
}
.animation-slide-out-left{animation-name: unAnimationSlideOutLeft;}"
`;

exports[`animation selectors > animation slideOutLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationSlideOutLeft {
from {
      transform: translate3d(0, 0, 0);
    }

    to {
      visibility: hidden;
      transform: translate3d(-100%, 0, 0);
    }
}
.animation-slide-out-left{animation-name: unAnimationSlideOutLeft;}"
`;

exports[`animation selectors > animation slideOutRight 1`] = `
"/* layer: default */
@keyframes unAnimationSlideOutRight {
from {
      transform: translate3d(0, 0, 0);
    }

    to {
      visibility: hidden;
      transform: translate3d(100%, 0, 0);
    }
}
.animation-slide-out-right{animation-name: unAnimationSlideOutRight;}"
`;

exports[`animation selectors > animation slideOutRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationSlideOutRight {
from {
      transform: translate3d(0, 0, 0);
    }

    to {
      visibility: hidden;
      transform: translate3d(100%, 0, 0);
    }
}
.animation-slide-out-right{animation-name: unAnimationSlideOutRight;}"
`;

exports[`animation selectors > animation slideOutUp 1`] = `
"/* layer: default */
@keyframes unAnimationSlideOutUp {
from {
      transform: translate3d(0, 0, 0);
    }

    to {
      visibility: hidden;
      transform: translate3d(0, -100%, 0);
    }
}
.animation-slide-out-up{animation-name: unAnimationSlideOutUp;}"
`;

exports[`animation selectors > animation slideOutUp with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationSlideOutUp {
from {
      transform: translate3d(0, 0, 0);
    }

    to {
      visibility: hidden;
      transform: translate3d(0, -100%, 0);
    }
}
.animation-slide-out-up{animation-name: unAnimationSlideOutUp;}"
`;

exports[`animation selectors > animation swing 1`] = `
"/* layer: default */
@keyframes unAnimationSwing {
20% {
      transform: rotate3d(0, 0, 1, 15deg);
    }

    40% {
      transform: rotate3d(0, 0, 1, -10deg);
    }

    60% {
      transform: rotate3d(0, 0, 1, 5deg);
    }

    80% {
      transform: rotate3d(0, 0, 1, -5deg);
    }

    to {
      transform: rotate3d(0, 0, 1, 0deg);
    }
}
.animation-swing{animation-name: unAnimationSwing; transform-origin: top center;}"
`;

exports[`animation selectors > animation swing with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationSwing {
20% {
      transform: rotate3d(0, 0, 1, 15deg);
    }

    40% {
      transform: rotate3d(0, 0, 1, -10deg);
    }

    60% {
      transform: rotate3d(0, 0, 1, 5deg);
    }

    80% {
      transform: rotate3d(0, 0, 1, -5deg);
    }

    to {
      transform: rotate3d(0, 0, 1, 0deg);
    }
}
.animation-swing{animation-name: unAnimationSwing; transform-origin: top center;}"
`;

exports[`animation selectors > animation tada 1`] = `
"/* layer: default */
@keyframes unAnimationTada {
from {
      transform: scale3d(1, 1, 1);
    }

    10%,
    20% {
      transform: scale3d(0.9, 0.9, 0.9) rotate3d(0, 0, 1, -3deg);
    }

    30%,
    50%,
    70%,
    90% {
      transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
    }

    40%,
    60%,
    80% {
      transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
    }

    to {
      transform: scale3d(1, 1, 1);
    }
}
.animation-tada{animation-name: unAnimationTada;}"
`;

exports[`animation selectors > animation tada with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationTada {
from {
      transform: scale3d(1, 1, 1);
    }

    10%,
    20% {
      transform: scale3d(0.9, 0.9, 0.9) rotate3d(0, 0, 1, -3deg);
    }

    30%,
    50%,
    70%,
    90% {
      transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
    }

    40%,
    60%,
    80% {
      transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
    }

    to {
      transform: scale3d(1, 1, 1);
    }
}
.animation-tada{animation-name: unAnimationTada;}"
`;

exports[`animation selectors > animation wobble 1`] = `
"/* layer: default */
@keyframes unAnimationWobble {
from {
      transform: translate3d(0, 0, 0);
    }

    15% {
      transform: translate3d(-25%, 0, 0) rotate3d(0, 0, 1, -5deg);
    }

    30% {
      transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 3deg);
    }

    45% {
      transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -3deg);
    }

    60% {
      transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
    }

    75% {
      transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -1deg);
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-wobble{animation-name: unAnimationWobble;}"
`;

exports[`animation selectors > animation wobble with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationWobble {
from {
      transform: translate3d(0, 0, 0);
    }

    15% {
      transform: translate3d(-25%, 0, 0) rotate3d(0, 0, 1, -5deg);
    }

    30% {
      transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 3deg);
    }

    45% {
      transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -3deg);
    }

    60% {
      transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
    }

    75% {
      transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -1deg);
    }

    to {
      transform: translate3d(0, 0, 0);
    }
}
.animation-wobble{animation-name: unAnimationWobble;}"
`;

exports[`animation selectors > animation zoomIn 1`] = `
"/* layer: default */
@keyframes unAnimationZoomIn {
from {
      opacity: 0;
      transform: scale3d(0.3, 0.3, 0.3);
    }

    50% {
      opacity: 1;
    }
}
.animation-zoom-in{animation-name: unAnimationZoomIn;}"
`;

exports[`animation selectors > animation zoomIn with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationZoomIn {
from {
      opacity: 0;
      transform: scale3d(0.3, 0.3, 0.3);
    }

    50% {
      opacity: 1;
    }
}
.animation-zoom-in{animation-name: unAnimationZoomIn;}"
`;

exports[`animation selectors > animation zoomInDown 1`] = `
"/* layer: default */
@keyframes unAnimationZoomInDown {
from {
      opacity: 0;
      transform: scale3d(0.1, 0.1, 0.1) translate3d(0, -1000px, 0);
      animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
    }

    60% {
      opacity: 1;
      transform: scale3d(0.475, 0.475, 0.475) translate3d(0, 60px, 0);
      animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
    }
}
.animation-zoom-in-down{animation-name: unAnimationZoomInDown;}"
`;

exports[`animation selectors > animation zoomInDown with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationZoomInDown {
from {
      opacity: 0;
      transform: scale3d(0.1, 0.1, 0.1) translate3d(0, -1000px, 0);
      animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
    }

    60% {
      opacity: 1;
      transform: scale3d(0.475, 0.475, 0.475) translate3d(0, 60px, 0);
      animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
    }
}
.animation-zoom-in-down{animation-name: unAnimationZoomInDown;}"
`;

exports[`animation selectors > animation zoomInLeft 1`] = `
"/* layer: default */
@keyframes unAnimationZoomInLeft {
from {
      opacity: 0;
      transform: scale3d(0.1, 0.1, 0.1) translate3d(-1000px, 0, 0);
      animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
    }

    60% {
      opacity: 1;
      transform: scale3d(0.475, 0.475, 0.475) translate3d(10px, 0, 0);
      animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
    }
}
.animation-zoom-in-left{animation-name: unAnimationZoomInLeft;}"
`;

exports[`animation selectors > animation zoomInLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationZoomInLeft {
from {
      opacity: 0;
      transform: scale3d(0.1, 0.1, 0.1) translate3d(-1000px, 0, 0);
      animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
    }

    60% {
      opacity: 1;
      transform: scale3d(0.475, 0.475, 0.475) translate3d(10px, 0, 0);
      animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
    }
}
.animation-zoom-in-left{animation-name: unAnimationZoomInLeft;}"
`;

exports[`animation selectors > animation zoomInRight 1`] = `
"/* layer: default */
@keyframes unAnimationZoomInRight {
from {
      opacity: 0;
      transform: scale3d(0.1, 0.1, 0.1) translate3d(1000px, 0, 0);
      animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
    }

    60% {
      opacity: 1;
      transform: scale3d(0.475, 0.475, 0.475) translate3d(-10px, 0, 0);
      animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
    }
}
.animation-zoom-in-right{animation-name: unAnimationZoomInRight;}"
`;

exports[`animation selectors > animation zoomInRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationZoomInRight {
from {
      opacity: 0;
      transform: scale3d(0.1, 0.1, 0.1) translate3d(1000px, 0, 0);
      animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
    }

    60% {
      opacity: 1;
      transform: scale3d(0.475, 0.475, 0.475) translate3d(-10px, 0, 0);
      animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
    }
}
.animation-zoom-in-right{animation-name: unAnimationZoomInRight;}"
`;

exports[`animation selectors > animation zoomInUp 1`] = `
"/* layer: default */
@keyframes unAnimationZoomInUp {
from {
      opacity: 0;
      transform: scale3d(0.1, 0.1, 0.1) translate3d(0, 1000px, 0);
      animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
    }

    60% {
      opacity: 1;
      transform: scale3d(0.475, 0.475, 0.475) translate3d(0, -60px, 0);
      animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
    }
}
.animation-zoom-in-up{animation-name: unAnimationZoomInUp;}"
`;

exports[`animation selectors > animation zoomInUp with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationZoomInUp {
from {
      opacity: 0;
      transform: scale3d(0.1, 0.1, 0.1) translate3d(0, 1000px, 0);
      animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
    }

    60% {
      opacity: 1;
      transform: scale3d(0.475, 0.475, 0.475) translate3d(0, -60px, 0);
      animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
    }
}
.animation-zoom-in-up{animation-name: unAnimationZoomInUp;}"
`;

exports[`animation selectors > animation zoomOut 1`] = `
"/* layer: default */
@keyframes unAnimationZoomOut {
from {
      opacity: 1;
    }

    50% {
      opacity: 0;
      transform: scale3d(0.3, 0.3, 0.3);
    }

    to {
      opacity: 0;
    }
}
.animation-zoom-out{animation-name: unAnimationZoomOut;}"
`;

exports[`animation selectors > animation zoomOut with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationZoomOut {
from {
      opacity: 1;
    }

    50% {
      opacity: 0;
      transform: scale3d(0.3, 0.3, 0.3);
    }

    to {
      opacity: 0;
    }
}
.animation-zoom-out{animation-name: unAnimationZoomOut;}"
`;

exports[`animation selectors > animation zoomOutDown 1`] = `
"/* layer: default */
@keyframes unAnimationZoomOutDown {
40% {
      opacity: 1;
      transform: scale3d(0.475, 0.475, 0.475) translate3d(0, -60px, 0);
      animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
    }

    to {
      opacity: 0;
      transform: scale3d(0.1, 0.1, 0.1) translate3d(0, 2000px, 0);
      animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
    }
}
.animation-zoom-out-down{animation-name: unAnimationZoomOutDown; transform-origin: center bottom;}"
`;

exports[`animation selectors > animation zoomOutDown with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationZoomOutDown {
40% {
      opacity: 1;
      transform: scale3d(0.475, 0.475, 0.475) translate3d(0, -60px, 0);
      animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
    }

    to {
      opacity: 0;
      transform: scale3d(0.1, 0.1, 0.1) translate3d(0, 2000px, 0);
      animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
    }
}
.animation-zoom-out-down{animation-name: unAnimationZoomOutDown; transform-origin: center bottom;}"
`;

exports[`animation selectors > animation zoomOutLeft 1`] = `
"/* layer: default */
@keyframes unAnimationZoomOutLeft {
40% {
      opacity: 1;
      transform: scale3d(0.475, 0.475, 0.475) translate3d(42px, 0, 0);
    }

    to {
      opacity: 0;
      transform: scale(0.1) translate3d(-2000px, 0, 0);
    }
}
.animation-zoom-out-left{animation-name: unAnimationZoomOutLeft; transform-origin: left center;}"
`;

exports[`animation selectors > animation zoomOutLeft with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationZoomOutLeft {
40% {
      opacity: 1;
      transform: scale3d(0.475, 0.475, 0.475) translate3d(42px, 0, 0);
    }

    to {
      opacity: 0;
      transform: scale(0.1) translate3d(-2000px, 0, 0);
    }
}
.animation-zoom-out-left{animation-name: unAnimationZoomOutLeft; transform-origin: left center;}"
`;

exports[`animation selectors > animation zoomOutRight 1`] = `
"/* layer: default */
@keyframes unAnimationZoomOutRight {
40% {
      opacity: 1;
      transform: scale3d(0.475, 0.475, 0.475) translate3d(-42px, 0, 0);
    }

    to {
      opacity: 0;
      transform: scale(0.1) translate3d(2000px, 0, 0);
    }
}
.animation-zoom-out-right{animation-name: unAnimationZoomOutRight; transform-origin: right center;}"
`;

exports[`animation selectors > animation zoomOutRight with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationZoomOutRight {
40% {
      opacity: 1;
      transform: scale3d(0.475, 0.475, 0.475) translate3d(-42px, 0, 0);
    }

    to {
      opacity: 0;
      transform: scale(0.1) translate3d(2000px, 0, 0);
    }
}
.animation-zoom-out-right{animation-name: unAnimationZoomOutRight; transform-origin: right center;}"
`;

exports[`animation selectors > animation zoomOutUp 1`] = `
"/* layer: default */
@keyframes unAnimationZoomOutUp {
40% {
      opacity: 1;
      transform: scale3d(0.475, 0.475, 0.475) translate3d(0, 60px, 0);
      animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
    }

    to {
      opacity: 0;
      transform: scale3d(0.1, 0.1, 0.1) translate3d(0, -2000px, 0);
      animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
    }
}
.animation-zoom-out-up{animation-name: unAnimationZoomOutUp; transform-origin: center bottom;}"
`;

exports[`animation selectors > animation zoomOutUp with variablePrefix 1`] = `
"/* layer: default */
@keyframes unAnimationZoomOutUp {
40% {
      opacity: 1;
      transform: scale3d(0.475, 0.475, 0.475) translate3d(0, 60px, 0);
      animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
    }

    to {
      opacity: 0;
      transform: scale3d(0.1, 0.1, 0.1) translate3d(0, -2000px, 0);
      animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
    }
}
.animation-zoom-out-up{animation-name: unAnimationZoomOutUp; transform-origin: center bottom;}"
`;

exports[`base selectors > base selectors 1`] = `
"/* layer: preflights */
:root { --un-animate-duration: 1s; --un-animate-delay: 1s; --un-animate-repeat: 1; }
@media print, (prefers-reduced-motion: reduce) {
        .animated { animation-duration: 1ms !important; transition-duration: 1ms !important; animation-iteration-count: 1 !important; }
        .animated[class*='out'] { opacity: 0; }
      }
/* layer: default */
.animated{animation-duration:var(--un-animate-duration);animation-fill-mode:both;}
.animate-infinate,
.animate-infinite{animation-iteration-count:infinite;}
.animate-fast{animation-duration:calc(var(--un-animate-duration) * 0.8);}
.animate-repeat-2{animation-iteration-count:calc(var(--un-animate-repeat) * 2);}
.animate-delay-0\\.5{animation-delay:calc(var(--un-animate-delay) * 0.5);}"
`;

exports[`base selectors > base selectors with variablePrefix 1`] = `
"/* layer: preflights */
:root { --foo-bar-duration: 1s; --foo-bar-delay: 1s; --foo-bar-repeat: 1; }
@media print, (prefers-reduced-motion: reduce) {
        .animated { animation-duration: 1ms !important; transition-duration: 1ms !important; animation-iteration-count: 1 !important; }
        .animated[class*='out'] { opacity: 0; }
      }
/* layer: default */
.animated{animation-duration:var(--foo-bar-duration);animation-fill-mode:both;}
.animate-repeat-2{animation-iteration-count:calc(var(--foo-bar-repeat) * 2);}
.animate-delay-2{animation-delay:calc(var(--foo-bar-delay) * 2);}
.animate-duration-2{animation-duration:calc(var(--foo-bar-duration) * 2);}"
`;

exports[`base selectors > invalid selectors 1`] = `
"/* layer: preflights */
:root { --un-animate-duration: 1s; --un-animate-delay: 1s; --un-animate-repeat: 1; }
@media print, (prefers-reduced-motion: reduce) {
        .animated { animation-duration: 1ms !important; transition-duration: 1ms !important; animation-iteration-count: 1 !important; }
        .animated[class*='out'] { opacity: 0; }
      }
/* layer: default */
.animated{animation-duration:var(--un-animate-duration);animation-fill-mode:both;}"
`;

exports[`default > default preflight 1`] = `
"/* layer: preflights */
:root { --un-animate-duration: 1s; --un-animate-delay: 1s; --un-animate-repeat: 1; }
@media print, (prefers-reduced-motion: reduce) {
        .animated { animation-duration: 1ms !important; transition-duration: 1ms !important; animation-iteration-count: 1 !important; }
        .animated[class*='out'] { opacity: 0; }
      }"
`;

exports[`preset-animate options > customize variablePrefix 1`] = `
"/* layer: preflights */
:root { --foo-bar-duration: 1s; --foo-bar-delay: 1s; --foo-bar-repeat: 1; }
@media print, (prefers-reduced-motion: reduce) {
        .animated { animation-duration: 1ms !important; transition-duration: 1ms !important; animation-iteration-count: 1 !important; }
        .animated[class*='out'] { opacity: 0; }
      }"
`;

exports[`preset-animate options > disable injectMediaQuery 1`] = `
"/* layer: preflights */
:root { --un-animate-duration: 1s; --un-animate-delay: 1s; --un-animate-repeat: 1; }"
`;
